# bold-nfs

./: .gitignore  Cargo.toml  LICENSE  README.md  nfs4.x  pyproject.toml
.benchmarks/Linux-CPython-3.10-64bit/: 0001_79150783e25d0e4427fc1726cf6abceda83a77aa_20241027_123916_uncommited-changes.json  0002_79150783e25d0e4427fc1726cf6abceda83a77aa_20241027_124345_uncommited-changes.json  0003_79150783e25d0e4427fc1726cf6abceda83a77aa_20241027_125435_uncommited-changes.json  0004_79150783e25d0e4427fc1726cf6abceda83a77aa_20241027_202035_uncommited-changes.json  0005_79150783e25d0e4427fc1726cf6abceda83a77aa_20241027_210853_uncommited-changes.json
bold-lib/: Cargo.toml
bold-lib/src/: lib.rs
bold-lib/src/proto/: nfs4_proto.rs  rpc_proto.rs  utils.rs
bold-lib/src/server/: clientmanager.rs  filemanager.rs  mod.rs  nfs40.rs  operation.rs  request.rs  response.rs
bold-lib/src/server/filemanager/: filehandle.rs  handle.rs  locking.rs  mod.rs
bold-lib/src/server/nfs40/: mod.rs  op_access.rs  op_close.rs  op_getattr.rs  op_lookup.rs  op_open.rs  op_openconfirm.rs  op_putfh.rs  op_read.rs  op_readdir.rs  op_remove.rs  op_renew.rs  op_set_clientid.rs  op_set_clientid_confirm.rs  op_setattr.rs  op_write.rs
bold-mem/: Cargo.toml
bold-mem/src/: main.rs  memoryfs.rs
exec/: Cargo.toml  memoryfs.yaml
lib/: Cargo.toml  README.md
lib/src/: lib.rs
lib/src/server/: clientmanager.rs  mod.rs  nfs40.rs  operation.rs  request.rs  response.rs
lib/src/server/filemanager/: caching.rs  filehandle.rs  handle.rs  locking.rs  mod.rs
lib/src/server/nfs40/: op_access.rs  op_close.rs  op_commit.rs  op_create.rs  op_getattr.rs  op_lookup.rs  op_open.rs  op_openconfirm.rs  op_putfh.rs  op_read.rs  op_readdir.rs  op_remove.rs  op_renew.rs  op_set_clientid.rs  op_set_clientid_confirm.rs  op_setattr.rs  op_write.rs
no_tests/: messages.rs  proto.rs
proto/: Cargo.toml
proto/src/: lib.rs  mod.rs  nfs4_proto.rs  utils.rs
src/: lib.rs  main.rs
src/proto/: mod.rs  nfs4_proto.rs  rpc_proto.rs  utils.rs
src/server/: clientmanager.rs  filemanager.rs  mod.rs  nfs40.rs  operation.rs  request.rs  response.rs
src/server/nfs40/: mod.rs  op_access.rs  op_close.rs  op_getattr.rs  op_lookup.rs  op_open.rs  op_openconfirm.rs  op_putfh.rs  op_read.rs  op_readdir.rs  op_renew.rs  op_set_clientid.rs  op_set_clientid_confirm.rs
tests/: conftest.py
tests/benchmarks/: test_bench_files.py
tests/integration/: test_one_client.py
