[package]
name = "bold"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde = "1.0.197"
serde-xdr = "0.6.0"
serde_bytes = "0.11.14"
serde_derive = "1.0.197"
tokio = {version = "^1.36.0" , features = ["full"] }
thiserror = "1.0.58"
bytes = "1.6.0"
base64 = "0.22.0"
byteorder = "1.5.0"
tokio-util = { version = "^0.7.10", features = ["codec"] }
tracing = "0.1.40"
futures = "0.3.30"
tokio-serde = "0.9.0"
futures-core = "0.3.30"
tokio-stream = "0.1.15"
tower = "0.4.13"
tokio-tower = "0.6.0"
tracing-subscriber = "0.3.18"
rand = "0.8.5"
multi_index_map = "0.11.0"
vfs = "0.12.0"
bitmaps = "3.2.1"
serde_bytes_ng = "0.1.2"
bitflags = "2.5.0"
num-traits = "0.2.18"
num-derive = "0.4.2"
actix = "0.13.5"
async-trait = "0.1.81"
