[package]
name = "bold"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde = "1.0.197"
serde-xdr = "0.6.0"
serde_bytes = "0.11.14"
serde_derive = "1.0.197"
tokio = {version = "^1.36.0" , features = ["full"] }
bytes = "1.6.0"
byteorder = "1.5.0"
tokio-util = { version = "^0.7.10", features = ["codec"] }
tracing = "0.1.40"
futures = "0.3.30"
futures-core = "0.3.30"
tokio-stream = "0.1.15"
tracing-subscriber = "0.3.18"
rand = "0.8.5"
multi_index_map = "0.11.0"
vfs = "0.12.0"
serde_bytes_ng = "0.1.2"
num-traits = "0.2.18"
num-derive = "0.4.2"
async-trait = "0.1.81"
tracing-test = "0.2.5"

