[package]
name = "bold-proto"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
bytes = "1.7.2"
num-derive = "0.4.2"
num-traits = "0.2.19"
serde = { version = "1.0.210", features = ["derive"] }
serde-xdr = "0.6.0"
serde_bytes = "0.11.15"
serde_derive = "1.0.210"
tokio-util = { version = "^0.7.12", features = ["codec"] }
tracing = "0.1.40"
